Prod-EU/force-app/main/default/objects/Account/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Duplicate Account</fullName>
            </value>
            <value>
                <fullName>Moved abroad</fullName>
            </value>
            <value>
                <fullName>Medical Reason</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Maternity/Paternity Leave</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Is opening</fullName>
            </value>
            <value>
                <fullName>Reduced Activity</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Temporarily Closed</fullName>
            </value>
            <value>
                <fullName>Temporarily Inactive</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
                <isActive>false</isActive>
                <label>Change of Ownership</label>
            </value>
            <value>
                <fullName>Complete check</fullName>
                <isActive>false</isActive>
                <label>Complete check</label>
            </value>
            <value>
                <fullName>Creation</fullName>
                <isActive>false</isActive>
                <label>Creation</label>
            </value>
            <value>
                <fullName>Data Privacy Law</fullName>
                <isActive>false</isActive>
                <label>Data Privacy Law</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Duplicate Reversal</fullName>
                <isActive>false</isActive>
                <label>Duplicate Reversal</label>
            </value>
            <value>
                <fullName>History forcing</fullName>
                <isActive>false</isActive>
                <label>History forcing</label>
            </value>
            <value>
                <fullName>Incorrect Professional Type</fullName>
                <isActive>false</isActive>
                <label>Incorrect Professional Type</label>
            </value>
            <value>
                <fullName>Initial Loading</fullName>
                <isActive>false</isActive>
                <label>Initial Loading</label>
            </value>
            <value>
                <fullName>Invalidation</fullName>
                <isActive>false</isActive>
                <label>Invalidation</label>
            </value>
            <value>
                <fullName>Licence Expired</fullName>
                <isActive>false</isActive>
                <label>Licence Expired</label>
            </value>
            <value>
                <fullName>Licence Revoked</fullName>
                <isActive>false</isActive>
                <label>Licence Revoked</label>
            </value>
            <value>
                <fullName>Moved to another country</fullName>
                <isActive>false</isActive>
                <label>Moved to another country</label>
            </value>
            <value>
                <fullName>Moved/unknown address</fullName>
                <isActive>false</isActive>
                <label>Moved/unknown address</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>