Prod-EU/force-app/main/default/objects/Account/fields/Insurance_Company_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Contract_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Company Contract Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>