Prod-EU/force-app/main/default/objects/Account/fields/Is_Admin_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Admin_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to mark for admin accounts</description>
    <label>Is Admin Account</label>
    <type>Checkbox</type>
</CustomField>