Prod-EU/force-app/main/default/objects/Account/fields/Is_Prior_Auth_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Prior_Auth_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is prior-auth required?</label>
    <type>Checkbox</type>
</CustomField>