Prod-EU/force-app/main/default/objects/Account/fields/IsFemale__c.field-meta.xml
<CustomField>
    <fullName>IsFemale__c</fullName>
    <formula>ISPICKVAL( Gender__c , &apos;Female&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsFemale</label>
    <type>Checkbox</type>
</CustomField>