Prod-EU/force-app/main/default/objects/Account/fields/IsMale__c.field-meta.xml
<CustomField>
    <fullName>IsMale__c</fullName>
    <formula>ISPICKVAL(Gender__c, &apos;Male&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMale</label>
    <type>Checkbox</type>
</CustomField>