Prod-EU/force-app/main/default/objects/Account/fields/Latest_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Latest_Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>