Prod-EU/force-app/main/default/objects/Account/fields/Latest_Transmitter_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Latest_Transmitter_Shipped__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Transmitter Shipped</label>
    <length>10</length>
    <type>Text</type>
</CustomField>