Prod-EU/force-app/main/default/objects/Account/fields/Lead_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Birth_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Birth Date</label>
    <type>Date</type>
</CustomField>