Prod-EU/force-app/main/default/objects/Account/fields/Mail_Opt_In_Language__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_In_Language__c</fullName>
    <label>Mail Opt In Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Language</valueSetName>
    </valueSet>
</CustomField>