Prod-EU/force-app/main/default/objects/Account/fields/Mail_Opt_In_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_In_Last_Modified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mail Opt In Last Modified</label>
    <type>DateTime</type>
</CustomField>