Prod-EU/force-app/main/default/objects/Account/fields/Mail_Opt_In_List__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_In_List__c</fullName>
    <description>This field will track the user Opt In value for mail</description>
    <inlineHelpText>Tracks the user Mail Opt In value</inlineHelpText>
    <label>Mail Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>