Prod-EU/force-app/main/default/objects/Account/fields/Mail_Opt_In_Method__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_In_Method__c</fullName>
    <label>Mail Opt In Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Method</valueSetName>
    </valueSet>
</CustomField>