Prod-EU/force-app/main/default/objects/Account/fields/Mail_Opt_Out_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_Out_Last_Modified__c</fullName>
    <description>This field captures the date/time when the person opted out of Mail</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures the date/time when the person Opted Out of Mail</inlineHelpText>
    <label>Mail Opt Out Last Modified</label>
    <type>DateTime</type>
</CustomField>