Prod-EU/force-app/main/default/objects/Account/fields/Mail_Opt_Out_List__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_Out_List__c</fullName>
    <description>This field will capture the value of person opting out of Mail</description>
    <inlineHelpText>Captures the person Mail Opt Out value</inlineHelpText>
    <label>Mail Opt Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>