Prod-EU/force-app/main/default/objects/Account/fields/Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Facilities</relationshipLabel>
    <relationshipName>Medical_Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>