Prod-EU/force-app/main/default/objects/Account/fields/New_Consumer__c.field-meta.xml
<CustomField>
    <fullName>New_Consumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Consumer?</label>
    <type>Checkbox</type>
</CustomField>