Prod-EU/force-app/main/default/objects/Account/fields/NHS_Number__c.field-meta.xml
<CustomField>
    <fullName>NHS_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NHS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>