Prod-EU/force-app/main/default/objects/Account/fields/Nightime_Hypoglycemia__c.field-meta.xml
<CustomField>
    <fullName>Nightime_Hypoglycemia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nightime Hypoglycemia</label>
    <type>Checkbox</type>
</CustomField>