Prod-EU/force-app/main/default/objects/Account/fields/No_Of_Active_SSIP_Rules__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Active_SSIP_Rules__c</fullName>
    <label>No. Of Active SSIP Rules</label>
    <summaryFilterItems>
        <field>SSIP_Rule__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>SSIP_Rule__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>