Prod-EU/force-app/main/default/objects/Account/fields/Notify_HCP_when_CGM_Ships__c.field-meta.xml
<CustomField>
    <fullName>Notify_HCP_when_CGM_Ships__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify HCP when CGM Ships</label>
    <type>Checkbox</type>
</CustomField>