Prod-EU/force-app/main/default/objects/Account/fields/Number_of_Active_Payor_SSIP_Rules__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Payor_SSIP_Rules__c</fullName>
    <description>Calculatest the active SSIP Rules tied to the account that have Payor association.</description>
    <label>Number of Active Payor SSIP Rules</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>