Prod-EU/force-app/main/default/objects/Account/fields/Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders__c</fullName>
    <description>Number of Orders from this customer.</description>
    <label>Number of Orders</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>