Prod-EU/force-app/main/default/objects/Account/fields/Number_of_Pending_Wkp_VRs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pending_Wkp_VRs__c</fullName>
    <description>Tracks the number of Pending VRs for the Wkp Account</description>
    <label>Number of Pending Wkp VRs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>