Prod-EU/force-app/main/default/objects/Account/fields/Number_of_Subscription_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Subscription_Orders__c</fullName>
    <description>Tracks total number of Subscription orders tied to the account.</description>
    <label>Number of Subscription Orders</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>