Prod-EU/force-app/main/default/objects/Account/fields/Number_of_Type_1_Patients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Type_1_Patients__c</fullName>
    <description>The field will be completed by the DE Field Sales User to record the number of Type 1 Patients within the practise.</description>
    <label>Number of Type 1 Patients</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>