Prod-EU/force-app/main/default/objects/Account/fields/OK_Academic_Title__c.field-meta.xml
<CustomField>
    <fullName>OK_Academic_Title__c</fullName>
    <description>OneKey - Picklist Code = TIU</description>
    <label>Academic Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leitender Chefarzt</fullName>
            </value>
            <value>
                <fullName>Leitender Stationsarzt</fullName>
            </value>
            <value>
                <fullName>Obermedizinaldirektor</fullName>
            </value>
            <value>
                <fullName>Oberpharmazierat</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Medical council</fullName>
            </value>
            <value>
                <fullName>Sanitary council</fullName>
            </value>
            <value>
                <fullName>Managing Consultant</fullName>
            </value>
            <value>
                <fullName>Leading pharmacist</fullName>
            </value>
            <value>
                <fullName>Leading consultant</fullName>
            </value>
            <value>
                <fullName>Medicinal Director</fullName>
            </value>
            <value>
                <fullName>Leading medical council</fullName>
            </value>
            <value>
                <fullName>Leading Pharmacie Director</fullName>
            </value>
            <value>
                <fullName>Pharmacy Director</fullName>
            </value>
            <value>
                <fullName>Pharmacy - Council</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>