Prod-EU/force-app/main/default/objects/Account/fields/OK_BSNR3_Id__c.field-meta.xml
<CustomField>
    <fullName>OK_BSNR3_Id__c</fullName>
    <description>OneKey - Id used to reference the third part of Facility number from IQVIA.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BSNR3 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>