Prod-EU/force-app/main/default/objects/Account/fields/OK_Detail_Category__c.field-meta.xml
<CustomField>
    <fullName>OK_Detail_Category__c</fullName>
    <description>OneKey - Picklist Code = TET</description>
    <label>Detail Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Pharmacy Service Provider</fullName>
            </value>
            <value>
                <fullName>Medical Center</fullName>
            </value>
            <value>
                <fullName>Medical Association</fullName>
            </value>
            <value>
                <fullName>Doctor Network</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>General Hospital</fullName>
            </value>
            <value>
                <fullName>Outpatient Department</fullName>
            </value>
            <value>
                <fullName>Mobile nursing</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical Association</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Medical Service</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Working place of the handicapped</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Blister center</fullName>
            </value>
            <value>
                <fullName>Information Center</fullName>
            </value>
            <value>
                <fullName>Military Hospital</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Dialysis Center</fullName>
            </value>
            <value>
                <fullName>Buying Group</fullName>
            </value>
            <value>
                <fullName>Trade organisation</fullName>
            </value>
            <value>
                <fullName>Specialized Hospital Center</fullName>
            </value>
            <value>
                <fullName>Franchise Company</fullName>
            </value>
            <value>
                <fullName>Public Health Department</fullName>
            </value>
            <value>
                <fullName>Health Insurance (legal)</fullName>
            </value>
            <value>
                <fullName>Group practice</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Veterninary practice</fullName>
            </value>
            <value>
                <fullName>Health Care Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>