Prod-EU/force-app/main/default/objects/Account/fields/OK_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>OK_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OneKey - The workplace does not want to receive emails</description>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>