Prod-EU/force-app/main/default/objects/Account/fields/OK_Inactive_Check__c.field-meta.xml
<CustomField>
    <fullName>OK_Inactive_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inactive status check to run VR once</description>
    <label>Inactive Check</label>
    <type>Checkbox</type>
</CustomField>