Prod-EU/force-app/main/default/objects/Account/fields/OK_Ind_Category__c.field-meta.xml
<CustomField>
    <fullName>OK_Ind_Category__c</fullName>
    <description>OneKey - Individual Category (CAT Code)</description>
    <label>Ind. Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other individual in consultation</fullName>
            </value>
            <value>
                <fullName>Other individual in dialysis</fullName>
            </value>
            <value>
                <fullName>Other individual in public health sector</fullName>
            </value>
            <value>
                <fullName>Other individual in insurance</fullName>
            </value>
            <value>
                <fullName>Other individual in administration</fullName>
            </value>
            <value>
                <fullName>Other dentist</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Not yet defined</fullName>
            </value>
            <value>
                <fullName>Physician in nursing home</fullName>
            </value>
            <value>
                <fullName>Physician in insurance</fullName>
            </value>
            <value>
                <fullName>Physician in medical service center</fullName>
            </value>
            <value>
                <fullName>Physician in authority</fullName>
            </value>
            <value>
                <fullName>Attending physician</fullName>
            </value>
            <value>
                <fullName>Consultation physician</fullName>
            </value>
            <value>
                <fullName>Dialysis physician</fullName>
            </value>
            <value>
                <fullName>External address</fullName>
            </value>
            <value>
                <fullName>Functionary physician</fullName>
            </value>
            <value>
                <fullName>Alternative practitioner</fullName>
            </value>
            <value>
                <fullName>Hospital pharmacist</fullName>
            </value>
            <value>
                <fullName>Physician in hospital</fullName>
            </value>
            <value>
                <fullName>Hospital dentist</fullName>
            </value>
            <value>
                <fullName>Laboratory consultant</fullName>
            </value>
            <value>
                <fullName>Physician in private practice</fullName>
            </value>
            <value>
                <fullName>Dentist in private practice</fullName>
            </value>
            <value>
                <fullName>Officinal pharmacist</fullName>
            </value>
            <value>
                <fullName>Nursing / support staff</fullName>
            </value>
            <value>
                <fullName>Physiotherapist / occupational therapist</fullName>
            </value>
            <value>
                <fullName>Private address</fullName>
            </value>
            <value>
                <fullName>Other pharmacist</fullName>
            </value>
            <value>
                <fullName>Other physician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>