Prod-EU/force-app/main/default/objects/Account/fields/OK_Ind_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>OK_Ind_Graduation_Year__c</fullName>
    <description>OK - Tracks the professional graduation year.</description>
    <label>Ind. Graduation Year</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>