Prod-EU/force-app/main/default/objects/Account/fields/OK_Ind_Type__c.field-meta.xml
<CustomField>
    <fullName>OK_Ind_Type__c</fullName>
    <description>OneKey - Picklist Code = TYP</description>
    <label>Ind. Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Researcher/Scientist</fullName>
            </value>
            <value>
                <fullName>Counselor/Social worker</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Dental Assistant</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Physical Therapist</fullName>
            </value>
            <value>
                <fullName>Laboratory technician</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Medical Assistant</fullName>
            </value>
            <value>
                <fullName>Optician</fullName>
            </value>
            <value>
                <fullName>Optometrist</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Dental Prosthetist</fullName>
            </value>
            <value>
                <fullName>Pharmacy technician</fullName>
            </value>
            <value>
                <fullName>Pharmacist Assistant / Technician</fullName>
            </value>
            <value>
                <fullName>Allied Health Professionals</fullName>
            </value>
            <value>
                <fullName>Midwife</fullName>
            </value>
            <value>
                <fullName>Technician/Technologist</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Veterinary Assistant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>